--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Go"
         app:layout_constraintEnd_toEndOf="@+id/edtext"
         app:layout_constraintStart_toStartOf="@+id/edtext"
         app:layout_constraintTop_toBottomOf="@+id/edtext" />
